--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -22,9 +22,10 @@ jobs:
 
       - uses: actions/checkout@v4
 
-      - name: install
+      - name: install and build
         run: |
-          sh -x ./build.sh
+          pnpm install
+          pnpm run build
 
       - name: publish
         if: startsWith(github.ref, 'refs/tags/v')
