--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -27,6 +27,12 @@ jobs:
           pnpm install
           pnpm run build
 
+      - uses: actions/checkout@v4
+        if: startsWith(github.ref, 'refs/tags/v')
+        with:
+          repository: fireproof-storage/fireproof
+          path: ./fireproof
+
       - name: publish
         if: startsWith(github.ref, 'refs/tags/v')
         env:
@@ -40,4 +46,5 @@ jobs:
           git tag -v $(git describe --tags --abbrev=0)
           # should only run if a tag is set
           echo "//registry.npmjs.org/:_authToken=${{ secrets.NPM_TOKEN }}" > ~/.npmrc
-          pnpm run publish
+          (cd dist && pnpm publish --access public --no-git-checks)
+
