chore: added '.' export

--- a/package.json
+++ b/package.json
@@ -7,6 +7,11 @@
   "scripts": {
     "build": "tsx merge-package.ts --prepare --verbose '@web3-storage/pail,https://github.com/mabels/pail.git,pnpm'"
   },
+  "exports": {
+     ".": {
+       "import": "./index.js"
+     }
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
